# FileSorter

./: README.md
FileSorter/: .gitignore  CMakeLists.txt  main.cpp  run.sh  string_generator.py
